메인페이지 기능 구현 (2021-03-16) ---------------------------------------------- 1. 실시간주차장 현황 slider 수정 2. 1024 보다 큰 사이즈 대응 3. 일부 반영 안한 icon 반영 4. 메인페이지 모바일 Markup 작업 5. 모바일 실시간주차장 현황 slider 수정

--- a/guideLine/html/main/index.html
+++ b/guideLine/html/main/index.html
@@ -211,6 +211,7 @@
             nextArrow:"<button type='button' class=''>next</button>", //다음버튼
             dotsClass:"slider-dots", // 아래 버튼 css 클래스 설정
             draggable: false, // 드래그 가능여부
+            initialSlide: -3, //초기 슬라이드 색인번호
 
             Responsive: [
                 {
