--- a/guideLine/html/sub/css.html
+++ b/guideLine/html/sub/css.html
@@ -35,6 +35,40 @@
     <main id="container">
         <section id="">
             <h2>CSS3</h2>
+            <h3>기본</h3>
+            <table class="default-table">
+                <colgroup>
+                    <col style="width: 25%" />
+                    <col style="width: 75%" />
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th scope="row">height: 100%;</th>
+                        <td>
+                            <xmp>
+html, body {
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+}
+                            </xmp>
+                         </td>
+                    </tr>
+                </tbody>
+            </table>
+            <h3>애니메이션</h3>
+            <table class="default-table">
+                <colgroup>
+                    <col style="width: 25%" />
+                    <col style="width: 75%" />
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th scope="row">마지막상태 유지</th>
+                        <td>animation-fill-mode: forwards;(축약형은 forwards;만 입력) </td>
+                    </tr>
+                </tbody>
+            </table>
             <h3>준비중</h3>
             <article class="explanation-box">
             
