--- a/guideLine/html/sub/sass.html
+++ b/guideLine/html/sub/sass.html
@@ -36,9 +36,12 @@
         <section id="">
             <section>
                 <h2>SASS</h2>
-                <h3>준비중</h3>
+                <h3>For문</h3>
                 <article class="explanation-box">
-                
+                    <ul>
+                        <li>@for $i from 1 through 9</li>
+                        <li>#{$i}</li>
+                    </ul>
                 </article>
             </section>
         </section>
