--- a/vueProject/playground/instance.html
+++ b/vueProject/playground/instance.html
@@ -15,6 +15,9 @@
         el: '#app',
         data: {
             message: 'Hi'
+        },
+        methods:{
+            
         }
     });
 
